[gd_scene load_steps=14 format=3 uid="uid://cawlti55sg0n1"]

[ext_resource type="Script" path="res://Scenes/block.gd" id="1_kiny5"]
[ext_resource type="Texture2D" uid="uid://b34hcmvvdy375" path="res://Sprites/Blocks/block.png" id="2_hwk5c"]
[ext_resource type="AudioStream" uid="uid://c5fykgu40aq44" path="res://Sounds/block_bump.wav" id="3_0a6nb"]
[ext_resource type="AudioStream" uid="uid://cefovxftt3dm6" path="res://Sounds/block_break.wav" id="4_1g66j"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wdpsh"]
atlas = ExtResource("2_hwk5c")
region = Rect2(4, 4, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n18e8"]
atlas = ExtResource("2_hwk5c")
region = Rect2(20, 4, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_usxsp"]
atlas = ExtResource("2_hwk5c")
region = Rect2(36, 4, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vtcj"]
atlas = ExtResource("2_hwk5c")
region = Rect2(52, 4, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_svpyt"]
atlas = ExtResource("2_hwk5c")
region = Rect2(68, 4, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wdn2"]
atlas = ExtResource("2_hwk5c")
region = Rect2(84, 4, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k3gx8"]
atlas = ExtResource("2_hwk5c")
region = Rect2(4, 4, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_6yt3e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdpsh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n18e8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usxsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vtcj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svpyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wdn2")
}],
"loop": false,
"name": &"break",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k3gx8")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_avrnn"]
size = Vector2(8.00001, 8)

[node name="Block" type="StaticBody2D"]
scale = Vector2(6, 6)
collision_layer = 16
collision_mask = 5
script = ExtResource("1_kiny5")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6yt3e")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-6.25849e-07, 2.10603e-06)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_avrnn")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, -4)
collision_mask = 4
collide_with_areas = true
collide_with_bodies = false

[node name="sfx_block_bump" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_0a6nb")

[node name="sfx_block_break" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_1g66j")

[connection signal="animation_finished" from="Sprite2D" to="." method="_on_sprite_2d_animation_finished"]
